--- a/src/App.css
+++ b/src/App.css
@@ -135,6 +135,7 @@ p {
   }
   .dice-btn-container:active .dice-container {
     background: hsl(150, 76%, 80%);
+    transition: 0.2s ease;
     transform: scale(1.2);
   }
 }
