--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
   flex-direction: column;
   align-items: center;
   width: var(--card-width-desk);
-  min-height: var(--card-height-desk);
+  height: var(--card-height-desk);
   background: hsl(217, 19%, 24%);
   border-radius: 16px;
 }
@@ -44,7 +44,7 @@
 
 .advice-container {
   display: flex;
-  min-height: 40%;
+  height: 40%;
   text-align: center;
   padding: 0 2em;
   overflow-y: scroll;
@@ -135,7 +135,7 @@ p {
   }
   .dice-btn-container:active .dice-container {
     background: hsl(150, 76%, 80%);
-    transition: 0.2s ease;
+    transition: 0.2s transform ease-in;
     transform: scale(1.2);
   }
 }
